# FiliVan

./: .gitignore  pyproject.toml  requirements.txt  setup.py
.github/workflows/: poetry_ci.yaml  python-ci.yaml  simple_ci.yaml
airflow_ml_dags/: README.md  docker-compose.yml  fernet_key.py
airflow_ml_dags/dags/: generate_data.py  predict.py  train.py
airflow_ml_dags/data/: GSPC_2000_2019.csv
airflow_ml_dags/images/airflow-data-generate/: generate_data.py
airflow_ml_dags/images/airflow-data-move/: move_data.py
airflow_ml_dags/images/airflow-data-split/: split_data.py
airflow_ml_dags/notebooks/: stock_price_forecast_fbprophet.ipynb
configs/: predict_config.yaml
kubernetes/: README.md  online-inference-deployment-rolling-update.yaml  online-inference-pod-blue-green.yaml  online-inference-pod-probes.yaml  online-inference-pod-recources.yaml  online-inference-pod.yaml  online-inference-replicaset.yaml
ml_project/: README.md  __init__.py  predict.py  requirements.txt  train.py
ml_project/.dvc/: config
ml_project/configs/: train_config.yaml
ml_project/data/: __init__.py  make_dataset.py
ml_project/enities/: __init__.py  model_params.py  train_pipeline_params.py
ml_project/features/: build_features.py
ml_project/ml_project/: inference.py  predict.py  train.py
ml_project/notebooks/: EDA.ipynb
ml_project/tests/: test_units.py
online_inference/: .gitignore  Dockerfile  Dockerfile_v2  README.md  app.py  app_v2.py  predict_script.py  test_app.py  test_requirements.txt
tests/: test_train_predict.py  test_units.py
(+19 files in other folders)
