[tool.poetry]
name = "ml_project"
version = "0.1.0"
description = "ML CI/CD project"
authors = ["FiliVan"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
coverage = "6.3.2"
dvc = "2.10.2"
gdown = "4.4.0"
hydra-core = "1.1.2"
mlflow = "1.25.1"
numpy = "1.22.3"
omegaconf = "2.1.2"
pandas = "1.4.2"
PyDrive2 = "1.10.1"
scikit-learn = "1.0.2"
scipy = "1.8.0"
sklearn = "0.0"
pytest = "^7.1.2"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
